# first_raylib_game

./: CMakeLists.txt  first_raylib_game.cpp  first_raylib_game.h
libs/raylib/Debug/: raylib.idb
